--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,1 +1,101 @@
-spring.application.name=bdhv_itclub
+server:
+  port: 8888
+logging:
+  level:
+    org.springframework.security: DEBUG
+
+spring:
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 50MB
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${GOOGLE_CLIENT_ID}
+            client-secret: ${GOOGLE_CLIENT_SECRET}
+            redirect-uri: "http://localhost:8888/login/oauth2/code/google"
+            scope:
+              - email
+              - profile
+          github:
+            client-id: ${GITHUB_CLIENT_ID}
+            client-secret: ${GITHUB_CLIENT_SECRET}
+            redirect-uri: "http://localhost:8888/login/oauth2/code/github"
+            scope:
+              - user:email
+        provider:
+          github:
+            authorization-uri: https://github.com/login/oauth/authorize
+            token-uri: https://github.com/login/oauth/access_token
+            user-info-uri: https://api.github.com/user
+            user-name-attribute: login
+  datasource:
+    url: jdbc:postgresql://localhost:5432/bdhv
+    username: postgres
+    password: password
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+    database: postgresql
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ngtbang2264.dev@gmail.com
+    password: ${MAIL_PASSWORD_SERVER}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+
+app:
+  security:
+    jwt:
+      access-expires-at: 3600000        # 1 giờ
+      refresh-expires-at: 604800000     # 7 ngày
+      prefix: "Bearer "
+      auth-header: "Authorization"
+      access-secret: ${JWT_ACCESS_SECRET}
+      refresh-secret: ${JWT_REFRESH_SECRET}
+
+
+  api:
+    base-url-api: http://localhost:8888
+    title: BHDV
+    version: 1.0.0
+    contact-email: ngtbang2264.dev@gmail.com
+    swagger:
+      enable: true
+payment:
+  bank_branch: ""
+  bank_number: ""
+  bank_username: ""
+  bank_password: ""
+cloudinary:
+  cloud_name: ${CLOUDINARY_CLOUD_NAME}
+  api_key: ${CLOUDINARY_API_KEY}
+  api_secret: ${CLOUDINARY_API_SECRET}
+
+vn_pay:
+  tmn_code: ${VNP_TMN_CODE}
+  secret_key: ${VNP_SECRET_KEY}
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+    url: /v3/api-docs
+    disable-swagger-default-url: true
+  api-docs:
+    enabled: true
+    path: /v3/api-docs
