--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,3 @@
 spring:
   profiles:
-    active: dev # Môi tr??ng m?c ??nh (có th? là dev, prod, test)
+    active: ${ENV} # Mï¿½i tr??ng m?c ??nh (cï¿½ th? lï¿½ dev, prod, test)
